--- a/configserver/src/main/resources/config/locations.yml
+++ b/configserver/src/main/resources/config/locations.yml
@@ -6,5 +6,5 @@ locations:
   contactDetails:
     name: "Jan Kowalski"
     email: "jan@kowalski.com"
-  onCallSupper:
+  onCallSupport:
     - (+48) 111 222 333
