--- a/configserver/src/main/resources/config/users-prod.yml
+++ b/configserver/src/main/resources/config/users-prod.yml
@@ -6,5 +6,5 @@ users:
   contactDetails:
     name: "Kamil Kowalski"
     email: "kamil@kowalski.com"
-  onCallSupper:
+  onCallSupport:
     - (+48) 222 111 333
