--- a/users/src/main/resources/application.yml
+++ b/users/src/main/resources/application.yml
@@ -1,6 +1,10 @@
 server:
   port: 8080
 spring:
+  application:
+    name: "users"
+  profiles:
+    active: "prod"
   datasource:
     url: jdbc:h2:mem:testdb
     driverClassName: org.h2.Driver
@@ -14,3 +18,5 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+  config:
+    import: "optional:configserver:http://localhost:8071/"
