--- a/locations/src/main/resources/application.yml
+++ b/locations/src/main/resources/application.yml
@@ -49,5 +49,5 @@ eureka:
 info:
   app:
     name: "locations"
-    description: "EventsFactory App"
+    description: "EventsFactory locations App"
     version: "1.0.0"
