--- a/locations/pom.xml
+++ b/locations/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>com.eventsfactory</groupId>
 	<artifactId>locations</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 	<name>locations</name>
 	<description>Microservice for locations</description>
 	<properties>
@@ -96,6 +97,16 @@
 							<artifactId>lombok</artifactId>
 						</exclude>
 					</excludes>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>jib-maven-plugin</artifactId>
+				<version>3.3.2</version>
+				<configuration>
+					<to>
+						<image>eventsfactory/${project.artifactId}</image>
+					</to>
 				</configuration>
 			</plugin>
 		</plugins>
